--- a/Intro.html/style.css
+++ b/Intro.html/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap');
 * {
     font-family:'Open Sans', 'Helvetica Neue', sans-serif;
+    scroll-behavior: smooth;
   }
 
 body {
@@ -65,6 +66,7 @@ a {
   display: flex;
   background-color: #222831;
   color: white; 
+  cursor: pointer;
 }
 #main { 
     padding: 0%;
@@ -158,6 +160,7 @@ a {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     width: 100%;
+    cursor: pointer;
   }
 .imgfut {
   width: 10%;
@@ -446,8 +449,15 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
   justify-content: center;
   align-content: center;
   text-align: center;
-  color: #222831;
+  color: #393E46;
   font-size: 2em;
+  transition: all .5s ease;
+}
+.hnta:hover {
+  background-color: #393E46;
+  color: white;
+  border: white solid;
+  cursor: pointer;
 }
 .clientes {
   border-radius: 15px;
