--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
     padding: 0;
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 0.10fr 1fr 1.18fr; 
+    grid-template-rows: 0.10fr 1fr .2fr; 
     color:#EEEEEE ;
     grid-template-areas: 
       "nave nave nave"
@@ -88,7 +88,7 @@ a {
   align-items: center;
   align-content: center;
 }
-@media screen and (max-width:600px) {
+@media screen and (max-width:1000px) {
   .l1 {
     font-size: 1em;
     margin: 3%;
