--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     font-family:'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
   }
-
 body {
     margin: 0%;
     text-decoration: none ;
@@ -11,6 +10,7 @@ body {
 }
 a {
   text-decoration: none;
+  color: #393E46;
 }
 /*HOME*/
 .fle {
@@ -25,7 +25,7 @@ a {
     padding: 0;
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 0.10fr 1fr .2fr; 
+    grid-template-rows: 0.10fr 1fr .3fr; 
     color:#EEEEEE ;
     grid-template-areas: 
       "nave nave nave"
@@ -109,6 +109,7 @@ a {
     justify-content: center; 
     align-items: center;
     align-content: center;
+    max-height: 40vh;
   }
 }
 .l2{
@@ -154,6 +155,7 @@ a {
     width: 100%;
     padding-top: 0;
     transition: 1s ease;
+    color: #393E46;
   }
   .futa:hover {
     background-color: #393E4635;
@@ -171,8 +173,9 @@ a {
     align-content: center;
     align-items: center;
     width: 100%;
-    margin-top: -12%;
+    margin-top: 10%;
     padding: 0%;
+    
   }
 .sec1 {
   background-color: white;
