--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-family:'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
   }
-body {
+#body {
     margin: 0%;
     text-decoration: none ;
     background-color: #DBE2EF ;
