--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     font-family:'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
   }
+  * {
+    text-decoration: none;
+  }
 #body {
     margin: 0%;
     text-decoration: none ;
@@ -36,6 +39,7 @@ a {
   }
   #nave { 
     grid-area: nave;
+    text-decoration: none;
     width: 100%;
     height: 4em;
     display: flex;
@@ -49,6 +53,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
 }
 #nav {
   font-size: 1em;
@@ -435,6 +440,35 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
 }
 
 /*QUIENES SOMOS*/
+@media screen and (max-width:600px) {
+  .qshed{
+    margin-top: 5em;
+  }
+  .displ{
+    margin: 1px;
+    padding: 1em;
+    border: #393E46 solid 5px;
+    display: flex;
+    flex-direction: column;
+    font-size: .5em;
+    background-color: #393E4630;
+  }
+  .imgmc{
+      width: 100%;
+      margin: 1em;
+  }
+  .merch {
+    width: 100%;
+    justify-content: center;
+  }
+  .pr{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 600px) {
 .cc {
   display: flex;
   flex-direction: column;
@@ -486,7 +520,7 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
   font-size: .5em;
   text-align: center;
 }
-
+}
 /*NuestroTrabajo*/
 @media screen and (min-width: 600px) {
 .hnt {
@@ -544,7 +578,7 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
   -webkit-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
 -moz-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
 box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.10);
-}
+}  
 }
 @media screen and (max-width: 600px) {
   #main { 
