--- a/style.css
+++ b/style.css
@@ -445,9 +445,8 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
     margin-top: 5em;
   }
   .displ{
-    margin: 1px;
     padding: 1em;
-    border: #393E46 solid 5px;
+    border: #393E4620 solid 5px;
     display: flex;
     flex-direction: column;
     font-size: .5em;
@@ -466,6 +465,8 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-top: #393E46 solid 5px;
+    margin-top: 5px;
   }
 }
 @media screen and (min-width: 600px) {
@@ -636,7 +637,6 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.10);
     margin: 5px;
   }
 }
-
 
 /*CONTACTO*/
 @media screen and (min-width: 600px) {
