--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
   }
   /*animt*/
   .logo {
-    animation: fadeIn ease 8s;
-    -webkit-animation: fadeIn ease 8s;
-    -moz-animation: fadeIn ease 8s;
-    -o-animation: fadeIn ease 8s;
-    -ms-animation: fadeIn ease 8s;
+    animation: fadeIn ease 3s;
+    -webkit-animation: fadeIn ease 3s;
+    -moz-animation: fadeIn ease 3s;
+    -o-animation: fadeIn ease 3s;
+    -ms-animation: fadeIn ease 3s;
   }
   @keyframes fadeIn {
     0% {opacity:0;}
@@ -53,7 +53,7 @@
     z-index: -1;
     animation: steam 20s linear infinite;
   }
-  
+
   @keyframes steam {
     0% {
       background-position: 0 0;
@@ -590,19 +590,29 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
 }
 /*NuestroTrabajo*/
 @media screen and (min-width: 600px) {
+#boldh3{
+  font-weight: bold;
+}
 .hnt {
+  font-size: 1.5em;
+  font-weight: 500;
   margin-top: 3em;
   margin-bottom: 3em;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-content: center;
+  align-items: center;
   text-align: center;
   color: #222831;
 }
 .hnta {
+  width: 10em;
   border: #393E46 solid;
   margin-top: 1em;
   background-color: white;
   border-radius: 15px;
+
   justify-content: center;
   align-content: center;
   text-align: center;
@@ -616,36 +626,36 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
   border: white solid;
   cursor: pointer;
 }
-.clientes {
-  border-radius: 15px;
-  width: 100%;
-  height: 30em;
-  display: flex;
+#clientes {
   background-color: white;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 5% 0 1% 0;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  -webkit-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
--moz-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
-}
-.cli {
-  border-radius: 5px;
-  font-size: 1em;
-  background-color: #393E4650;
-  border: #393E4640 solid;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+} 
+.sep{
   margin: 5px;
-  transition: all .5sec ease;
-  padding: 5%;
-}
-.cli:hover {
   border: #393E46 solid;
-  -webkit-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
--moz-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.10);
-}  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: space-between;
+  color: #393E46;
+}
+.caardt{
+  border-top: #393E46 solid;
+  border-bottom: #393E46 solid;
+}
+.cardtm {
+  width: 100%;
+}
+.cbe {
+  align-content: flex-end;
+  background-color: #393E46;
+  color: white;
+  text-decoration: none;
+  margin-top: 5em;
+  margin-bottom: 2em;
+}
 }
 @media screen and (max-width: 600px) {
   #main { 
@@ -694,16 +704,7 @@ box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.10);
   -moz-box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.54);
   box-shadow: 0px 4px 40px 4px rgba(0,0,0,0.40);
   }
-  .cli {
-    width: 80%;
-    border-radius: 5px;
-    font-size: 1em;
-    background-color: #393E4650;
-    border: #393E46 solid;
-    margin: 5px;
-  }
 }
-
 /*CONTACTO*/
 @media screen and (min-width: 600px) {
 .hecon {
